# auto_crbot_configure

./: CMakeLists.txt  config.cpp  config.h  func.hpp  main.cpp
